--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/jstoxml": "^2.0.2",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "@types/yup": "^0.32.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jstoxml": "^3.2.7",
     "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
-    "uuid": "^8.3.2"
+    "supertest": "^6.3.3",
+    "uuid": "^8.3.2",
+    "yup": "^1.2.0"
   }
 }
